<resources>
    <string name="app_name">WordTest</string>
    <string name="register">Регистрация</string>
    <string name="hello">Авторизация</string>
    <string name="loger">Вход в учетную запись</string>
    <string name="sigh_in">Войти</string>
    <string name="email">Email</string>
    <string name="password">Введите пароль</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="back">Назад</string>
    <string name="go">Далее</string>
    <string name="test">Тесты</string>
    <string name="block_1">Блок 1</string>
    <string name="block_2">Блок 2</string>
    <string name="block_3">Блок 3</string>
    <string name="block_4">Блок 4</string>
    <string name="block_5">Блок 5</string>
    <string name="log_block">Напишите ассоциацию к слову</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_test_1">1. Введите ассоциацию</string>
    <string name="input_test_2">2. Введите ассоциацию</string>
    <string name="input_test_3">3. Введите ассоциацию</string>
    <string name="input_test_4">4. Введите ассоциацию</string>
    <string name="input_test_5">5. Введите ассоциацию</string>
    <string name="input_test_6">6. Введите ассоциацию</string>
    <string name="input_test_7">7. Введите ассоциацию</string>
    <string name="input_test_8">8. Введите ассоциацию</string>
    <string name="input_test_9">9. Введите ассоциацию</string>
    <string name="input_test_10">10. Введите ассоциацию</string>
    <string name="complete">Завершить</string>
    <string name="time_test">В ближайшее время появятся тесты!</string>
    <string name="support">Поддержка</string>
    <string name="exit_profile">Выйти из профиля</string>
    <string name="level_log">Уровень</string>
    <string name="chat_support">Опишите свою проблему</string>
    <string name="nazat">Назад</string>
    <string name="send">Отправить</string>
    <string name="exit">Выйти</string>
    <string name="save_result">Сохранить ответы</string>
    <string name="add_photo">Добавьте изображения</string>
    <string name="high">Высокий</string>
    <string name="average">Средний</string>
    <string name="easy">Легкий</string>
    <string name="changeLevel">Выберите уровень</string>
    <string name="btn_level">Уровни</string>
    <string name="averageLevel">Средний Уровень</string>
    <string name="easyLevel">Легкий Уровень</string>
    <string name="highLevel">Высокий Уровень</string>
    <string name="all_pole">Заполните все ячейки !!!</string>
    <string name="login_mainAct">Введите логин</string>
    <string name="reg_name">Имя и фамилия</string>
    <string name="reg_email">Почта</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_phone">Номер телефона</string>
    <string name="register_user">Зарегистрировать</string>
    <string name="hello_admin">Привет Админ</string>
    <string name="entrance_admin">Админ</string>
    <string name="login_firebase">Зайти в Firebase</string>
    <string name="answers_user">Посмотреть ответы</string>
    <string name="answers_map">Мои ответы</string>
    <string name="class_user">Класс</string>
    <string name="answer_my">Ответы</string>
    <string name="text_support">Поддержка</string>
</resources>