<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".activity.registration.UserRegistrationActivity">


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/exit_btn"
        android:minWidth="58dp"
        android:minHeight="38dp"
        android:onClick="goBack"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/white"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/admin_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/intelone"
        android:text="@string/hello_admin"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_log"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/container_border"
        android:gravity="top"
        android:hint="@string/reg_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_in"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_name"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/container_border"
        android:gravity="top"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_in"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_email"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/container_border"
        android:gravity="top"
        android:hint="@string/reg_password"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_in"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/registration_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_password"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/container_border"
        android:gravity="top"
        android:hint="@string/reg_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_in"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/registration_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_phone"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/container_border"
        android:gravity="top"
        android:hint="@string/class_user"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_in"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/registration_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_class"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/main_b"
        android:padding="15dp"
        android:text="@string/register_user"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnOpenStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/admin_main"
        android:padding="15dp"
        android:text="@string/login_firebase"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>

