<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".activity.maps.MapActivity">

    <!-- Profile Name TextView -->
    <!-- Profile Image ImageView -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/intelone"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/easyLevel" />


    <Button
        android:id="@+id/btn_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_level"
        android:fontFamily="@font/intelone"
        android:textColor="#292825"
        android:backgroundTint="#b8891d"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        tools:ignore="RelativeOverlap" />




    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_below="@+id/btn_level"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/block_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/block_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:fontFamily="@font/intelone"
                    android:text="@string/block_1"
                    android:textColor="@color/text_in"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Блок 2 -->
            <LinearLayout
                android:id="@+id/block_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/block_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:fontFamily="@font/intelone"
                    android:text="@string/block_2"
                    android:textColor="@color/text_in"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Блок 3 -->
            <LinearLayout
                android:id="@+id/block_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/block_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:fontFamily="@font/intelone"
                    android:text="@string/block_3"
                    android:textColor="@color/text_in"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Блок 4 -->
            <LinearLayout
                android:id="@+id/block_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/block_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:fontFamily="@font/intelone"
                    android:text="@string/block_4"
                    android:textColor="@color/text_in"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Блок 5 -->
            <LinearLayout
                android:id="@+id/block_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/block_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:fontFamily="@font/intelone"
                    android:text="@string/block_5"
                    android:textColor="@color/text_in"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/btn_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/rounded_border"
        android:contentDescription="@string/support"
        android:padding="10dp"
        app:srcCompat="@android:drawable/ic_menu_call" />


    <Button
        android:id="@+id/view_files_button"
        android:layout_below="@id/scroll_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/answers"
        android:text="@string/answers_map" />

    <TextView
        android:id="@+id/exit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_profile"
        android:textSize="18sp"
        android:textColor="@color/text_in"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="35dp"
        />



</RelativeLayout>