<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.activity.MainActivity">


    <LinearLayout
        android:id="@+id/avtores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intelone"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avtores"
        android:layout_marginTop="90dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/container_border"
            android:gravity="top"
            android:hint="@string/login_mainAct"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_in"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/container_border"
            android:gravity="top"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_in"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/main_b"
            android:onClick="onLoginButtonClicked"
            android:padding="20dp"
            android:text="@string/sigh_in"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/admin_main"
            android:padding="12dp"
            android:text="@string/entrance_admin"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</RelativeLayout>
