<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".activity.LevelActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="@font/intelone"
        android:text="@string/changeLevel"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/easyLevel"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/intelone"
        android:backgroundTint="#207344"
        android:textColor="@color/white"
        android:text="@string/easy"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/averageLevel"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#a68f1e"
        android:text="@string/average"
        android:textColor="@color/white"
        android:fontFamily="@font/intelone"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyLevel"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/highLevel"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#941a13"
        android:text="@string/high"
        android:fontFamily="@font/intelone"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageLevel"
        app:layout_constraintVertical_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>