<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/two_blue">


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/exit_btn"
        android:minWidth="58dp"
        android:minHeight="38dp"
        android:onClick="goBack"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:tint="@color/text_all"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/text_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:fontFamily="@font/intelone"
        android:textSize="25sp"
        android:text="@string/text_support" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_tests_border"
        android:gravity="top"
        android:hint="@string/chat_support"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_all"
        android:layout_below="@+id/text_support"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/et_message"
        android:backgroundTint="@color/green_sup"
        android:text="@string/send" />

</RelativeLayout>